# adventofcode-2021

./: .gitignore  Cargo.toml  README.md  shell.nix
binary-diagnostic-day03-part1/: Cargo.toml
binary-diagnostic-day03-part1/src/: main.rs
binary-diagnostic-day03-part2/src/: main.rs
dive-day02-part1/: Cargo.toml
dive-day02-part1/src/: main.rs
dive-day02-part2/src/: main.rs
sonar-sweep-01/: Cargo.toml
sonar-sweep-01/src/: main.rs
src/: lib.rs
src/day01/: day01_1.rs  day01_2.rs
src/day02/: part1.rs  part2.rs
src/day03/: part1.rs  part2.rs
src/day04/: lib.rs  part1.rs  part2.rs
src/day05/: lib.rs  part1.rs  part2.rs
