[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day01_1"
path = "src/day01/day01_1.rs"

[[bin]]
name = "day01_2"
path = "src/day01/day01_2.rs"

[[bin]]
name = "day02_1"
path = "src/day02/part1.rs"

[[bin]]
name = "day02_2"
path = "src/day02/part2.rs"

[[bin]]
name = "day03_1"
path = "src/day03/part1.rs"

[[bin]]
name = "day03_2"
path = "src/day03/part2.rs"

[[bin]]
name = "day04_1"
path = "src/day04/part1.rs"

[[bin]]
name = "day04_2"
path = "src/day04/part2.rs"

[[bin]]
name = "day05_1"
path = "src/day05/part1.rs"

[[bin]]
name = "day05_2"
path = "src/day05/part2.rs"
